testsuite/tests/grammar/invalid_lexers/pattern_6.lkt
lexer foo_lexer {
    example <- p"a)"
}

grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
